--- a/myproject/myapp/templates/login.html
+++ b/myproject/myapp/templates/login.html
@@ -30,7 +30,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Your Website Name. All rights reserved.</p>
+    <p>&copy; 2024 कलाकुंज. All rights reserved.</p>
 </footer>
 
 </body>
