--- a/myproject/myapp/templates/profile.html
+++ b/myproject/myapp/templates/profile.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        
         <h1>{{ user.username }}'s Profile</h1>
     </header>
 
@@ -41,7 +42,7 @@
                     <div class="design-item">
                         <h3>{{ design.title }}</h3>
                         <p>{{ design.description }}</p>
-                        <p>Price: ${{ design.price }}</p>
+                        <p>Price: Rs.{{ design.price }}/-</p>
                         <p>File Type: {{ design.file_type }}</p>
                         <p>File Size: {{ design.file_size }} bytes</p>
 
